Mention pop-up overflow fix on comments

--- a/src/styles/components/cards/CommentCard.module.scss
+++ b/src/styles/components/cards/CommentCard.module.scss
@@ -9,7 +9,6 @@
         border-radius: 15px;
         padding: 6px 12px;
         font-size: 14px;
-        overflow: hidden;
     }
 
     .buttons {
